# s5p6818_device

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.c  camera_pub.c  config.h  engine.c  engine.h  main.c  mqtt.c  mqtt.h  mymqtt.c  mymqtt.h  myprogram
image/: Makefile  jpg2rgb.c  jpgtorgb.c
include/camera/: camera_pub.h  camera_test.h
include/config/: config.h
include/engine/: engine.h
include/mqtt/: mqtt.h
other/camera_test/: camera.h
other/image/: Makefile  jpg2rgb  jpg2rgb.c
src/: main.c
src/camera/: camera_pub.c  camera_test.c
src/engine/: engine.c
src/mqtt/: mqtt.c
